--- a/sass/site/primary/_gutenberg.scss
+++ b/sass/site/primary/_gutenberg.scss
@@ -19,7 +19,7 @@
 			margin-left: -100px;
 			margin-right: -100px;
 			max-width: unset;
-			width: unset;
+			width: calc(var(--content-width) + 200px);
 			.alignfull,
 			.alignwide{
 				width: 100%;
